<resources>
    <string name="app_name">HW2_Q6</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">\</string>
    <string name="squareRoot">SQRT</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="allClear">AC</string>
</resources>