<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/calcResultText"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="84dp"
        android:layout_marginRight="5dp"
        android:hint="Enter numbers"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/black"
        android:text="@string/number1"
        android:textSize="20sp"

        app:cornerRadius="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcResultText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/black"
        android:text="@string/number2"
        android:textSize="20sp"


        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/calcResultText" />

    <Button
        android:id="@+id/button3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/black"
        android:text="@string/number3"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/calcResultText" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/black"
        android:text="@string/add"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/calcResultText" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/black"
        android:text="@string/multiply"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonAdd"
        app:layout_constraintTop_toBottomOf="@+id/calcResultText" />

    <Button
        android:id="@+id/button4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/number4"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/number5"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/number6"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/subtract"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/divide"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonSubtract"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/button7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/number7"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/number8"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/number9"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/buttonSqrt"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/squareRoot"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubtract" />

    <Button
        android:id="@+id/button0"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginLeft="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/number0"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/buttonDecimal"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/decimal"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/equals"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonDecimal"
        app:layout_constraintTop_toBottomOf="@+id/buttonSqrt" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/allClear"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonEquals"
        app:layout_constraintTop_toBottomOf="@+id/buttonSqrt" />

    <!--
1, 2, 3, +, *
4, 5, 6, -, \
7, 8, 9 sqrt
0, ., =
-->

</androidx.constraintlayout.widget.ConstraintLayout>
